# zapybase

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-cargo.yml  release-npm.yml  release-pypi.yml  release.yml  rust.yml
.opencode/plans/: 002-fix-wasm-rng.md
crates/surgedb-bindings/: pyproject.toml
crates/surgedb-cli/src/: main.rs
crates/surgedb-core/: Cargo.toml
crates/surgedb-core/benches/: persistence.rs  quantized_db.rs  vector_db.rs
crates/surgedb-core/src/: bitmap_index.rs  db.rs  filter.rs  hnsw.rs  lib.rs  persistent.rs  quantized_storage.rs  storage.rs
crates/surgedb-core/src/diskann/: vamana.rs
crates/surgedb-server/: Cargo.toml  build.rs
crates/surgedb-server/src/: main.rs
crates/surgedb-server/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/surgedb-server/ui/src/: App.tsx  index.css
crates/surgedb-server/ui/src/pages/: Collections.tsx  Metrics.tsx  Overview.tsx  Playground.tsx
crates/surgedb-wasm/: Cargo.toml  README.md  index.html
crates/surgedb-wasm/src/: lib.rs
crates/zapybase-cli/: Cargo.toml
crates/zapybase-cli/src/: main.rs
crates/zapybase-core/: Cargo.toml
crates/zapybase-core/benches/: distance.rs
crates/zapybase-core/src/: db.rs  distance.rs  error.rs  hnsw.rs  lib.rs  mmap_db.rs  mmap_storage.rs  persistent.rs  quantized_storage.rs  snapshot.rs  storage.rs  types.rs  wal.rs
crates/zapybase-server/: Cargo.toml
crates/zapybase-server/src/: main.rs
examples/python/: basic.py
examples/rust/: basic.rs
scripts/perf/: README.md  http_bench.py  perf.toml  run_perf.py
