[workspace]
resolver = "2"
members = ["crates/zapybase-core", "crates/zapybase-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Meet Sonawane"]
license = "MIT"
repository = "https://github.com/meetsonawane/zapybase"
description = "A high-performance, lightweight vector database"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
parking_lot = "0.12"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
