[package]
name = "surgedb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core vector indexing engine for SurgeDB"

[dependencies]
thiserror.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
bincode.workspace = true
rayon = "1.11.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion.workspace = true
tempfile = "3.10"

[[bench]]
name = "distance"
harness = false



[features]
default = ["simd"]
simd = []
