[package]
name = "surgedb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for SurgeDB"

[dependencies]
surgedb-core = { path = "../surgedb-core", features = ["persistence"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = { workspace = true }
dotenvy = "0.15"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
sysinfo = "0.30" # For health stats
rust-embed = { version = "8.0", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
mime_guess = "2.0"
