[package]
name = "surgedb-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for SurgeDB - run vector search in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core SurgeDB with WASM features
surgedb-core = { path = "../surgedb-core", default-features = false, features = ["wasm"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization for JS interop
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Error handling
thiserror.workspace = true

# Console logging for debugging
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
