[package]
name = "zapybase-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core vector indexing engine for ZappyBase"

[dependencies]
thiserror.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
bincode.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion.workspace = true
tempfile = "3.10"

[[bench]]
name = "distance"
harness = false

[features]
default = ["simd"]
simd = []
