[package]
name = "zapybase-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for ZappyBase"

[dependencies]
zapybase-core = { path = "../zapybase-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = { workspace = true }
